--- a/index.html
+++ b/index.html
@@ -4,77 +4,216 @@
 <meta charset="UTF-8">
 <title>Free TikTok Services</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body{margin:0;background:#0b1220;color:#e5e7eb;font-family:Arial}
-.container{max-width:420px;margin:auto;padding:15px}
-.logo{display:block;margin:10px auto;width:90px;height:90px;border-radius:50%}
-.nav{text-align:center;margin-bottom:10px}
-.nav a{margin:0 8px;color:#38bdf8;text-decoration:none;font-size:14px}
-.notice{background:#020617;border:1px solid #1f2937;border-radius:10px;padding:10px;font-size:13px;text-align:center}
-.operator{text-align:center;font-weight:900;letter-spacing:2px;margin:8px 0}
-.card{background:#020617;border:1px solid #1f2937;border-radius:10px;padding:15px;margin:15px 0}
-input{width:100%;padding:10px;border:none;border-radius:6px;background:#0f172a;color:white;margin:8px 0}
-button{width:100%;padding:10px;border:none;border-radius:6px;background:#2563eb;color:white}
-.timer{text-align:center;font-size:12px;color:#94a3b8;margin-top:5px}
-.footer{text-align:center;font-size:12px;color:#64748b;margin-top:10px}
-a{color:#38bdf8;text-decoration:none}
+:root{
+  --bg:#0b1220;
+  --card:#020617;
+  --border:#1f2937;
+  --blue:#38bdf8;
+  --btn:#2563eb;
+  --muted:#94a3b8;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:var(--bg);
+  color:#e5e7eb;
+  font-family:Arial, sans-serif;
+}
+.container{
+  max-width:420px;
+  margin:auto;
+  padding:14px;
+}
+.logo{
+  display:block;
+  margin:10px auto 6px;
+  width:90px;height:90px;border-radius:50%;
+}
+.notice{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:12px;
+  padding:12px;
+  text-align:center;
+  margin:10px 0;
+}
+.big-link{
+  display:inline-block;
+  margin-top:8px;
+  padding:10px 14px;
+  border:2px solid var(--blue);
+  border-radius:12px;
+  font-size:26px;
+  font-weight:900;
+  letter-spacing:1px;
+  color:var(--blue);
+  text-decoration:none;
+}
+.operator{
+  text-align:center;
+  font-weight:900;
+  letter-spacing:2px;
+  margin:8px 0 12px;
+}
+.nav{
+  text-align:center;
+  margin-bottom:10px;
+}
+.nav button{
+  background:#334155;color:#fff;border:none;
+  padding:8px 12px;border-radius:8px;margin:0 4px;
+}
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:12px;
+  padding:14px;
+  margin:12px 0;
+}
+h3{margin:0 0 8px;text-align:center}
+input{
+  width:100%;padding:10px;border:none;border-radius:8px;
+  background:#0f172a;color:#fff;margin:8px 0;
+}
+button.action{
+  width:100%;padding:10px;border:none;border-radius:8px;
+  background:var(--btn);color:#fff;font-size:14px;
+}
+button.action:disabled{background:#334155}
+.timer{
+  text-align:center;font-size:12px;color:var(--muted);margin-top:6px;
+}
+.price{
+  display:flex;justify-content:space-between;align-items:center;
+  padding:10px;border:1px dashed var(--border);border-radius:10px;
+  margin:8px 0;font-size:14px;
+}
+.footer{
+  text-align:center;font-size:12px;color:#64748b;margin:12px 0;
+}
+.whatsapp{
+  position:fixed;left:15px;bottom:15px;
+  background:#25D366;color:#fff;text-decoration:none;
+  padding:12px 16px;border-radius:999px;font-weight:700;
+}
+.hidden{display:none}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<img src="logo.png" class="logo">
+  <!-- LOGO -->
+  <img src="logo.png" class="logo" alt="Logo">
 
-<div class="notice">
-<b>OUR FREE WEBSITE</b><br>
-<a href="https://zefoy.com" target="_blank">zefoy.com</a>
+  <!-- TOP NOTICE + BIG ZEOFY LINK -->
+  <div class="notice">
+    <div><b>OUR FREE WEBSITE</b></div>
+    <a class="big-link" href="https://zefoy.com" target="_blank">ZEOFY.COM</a>
+    <div style="font-size:12px;color:var(--muted);margin-top:6px">
+      Free demo • cooldown required
+    </div>
+  </div>
+
+  <!-- OPERATOR -->
+  <div class="operator">
+    A L I &nbsp; S E N I O R &nbsp; O P R E T E R
+  </div>
+
+  <!-- NAV -->
+  <div class="nav">
+    <button onclick="show('services')">Services</button>
+    <button onclick="show('prices')">Price List</button>
+    <button onclick="show('about')">About</button>
+  </div>
+
+  <!-- SERVICES -->
+  <div id="services">
+    <div class="card">
+      <h3>❤️ TikTok Likes</h3>
+      <input placeholder="Paste TikTok video link">
+      <button class="action" onclick="start(this)">Start</button>
+      <div class="timer"></div>
+    </div>
+
+    <div class="card">
+      <h3>👁️ TikTok Views</h3>
+      <input placeholder="Paste TikTok video link">
+      <button class="action" onclick="start(this)">Start</button>
+      <div class="timer"></div>
+    </div>
+
+    <div class="card">
+      <h3>➕ TikTok Followers</h3>
+      <input placeholder="Paste TikTok profile link">
+      <button class="action" onclick="start(this)">Start</button>
+      <div class="timer"></div>
+    </div>
+  </div>
+
+  <!-- PRICES -->
+  <div id="prices" class="hidden">
+    <div class="card">
+      <h3>Price List</h3>
+      <div class="price"><span>❤️ 1K Likes</span><b>FREE (Demo)</b></div>
+      <div class="price"><span>👁️ 5K Views</span><b>FREE (Demo)</b></div>
+      <div class="price"><span>➕ 100 Followers</span><b>FREE (Demo)</b></div>
+      <div style="font-size:12px;color:var(--muted);text-align:center">
+        Manual / external real services only
+      </div>
+    </div>
+  </div>
+
+  <!-- ABOUT -->
+  <div id="about" class="hidden">
+    <div class="card">
+      <h3>About</h3>
+      <p style="font-size:14px">
+        This is a <b>free demo portal</b> for UI & educational purpose.
+        No real automation or bots are used.
+      </p>
+      <p style="font-size:14px">
+        Inspired by:
+        <a href="https://zefoy.com" target="_blank">zefoy.com</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="footer">Demo / Educational purpose only</div>
 </div>
 
-<div class="operator">
-A L I &nbsp; S E N I O R &nbsp; O P R E T E R
-</div>
-
-<div class="nav">
-<a href="index.html">Home</a>
-<a href="prices.html">Price List</a>
-<a href="about.html">About</a>
-</div>
-
-<div class="card">
-<h3>❤️ TikTok Likes</h3>
-<input placeholder="Paste TikTok video link">
-<button onclick="start(this)">Start</button>
-<div class="timer"></div>
-</div>
-
-<div class="card">
-<h3>👁️ TikTok Views</h3>
-<input placeholder="Paste TikTok video link">
-<button onclick="start(this)">Start</button>
-<div class="timer"></div>
-</div>
-
-<div class="card">
-<h3>➕ TikTok Followers</h3>
-<input placeholder="Paste TikTok profile link">
-<button onclick="start(this)">Start</button>
-<div class="timer"></div>
-</div>
-
-<div class="footer">Demo / Educational purpose only</div>
-</div>
+<!-- WHATSAPP -->
+<a class="whatsapp" href="https://wa.me/923180957645" target="_blank">WhatsApp</a>
 
 <script>
-const TIME=30;
-function start(b){
-let t=TIME,box=b.parentElement,q=box.querySelector(".timer");
-b.disabled=true;q.innerText="Please wait "+t+" seconds";
-let i=setInterval(()=>{
-t--;q.innerText="Please wait "+t+" seconds";
-if(t<=0){clearInterval(i);b.disabled=false;q.innerText="Service ready";}
-},1000);
+const TIMER_SECONDS = 30;
+
+function start(btn){
+  let card = btn.parentElement;
+  let t = TIMER_SECONDS;
+  let timer = card.querySelector(".timer");
+  btn.disabled = true;
+  timer.innerText = "Please wait " + t + " seconds";
+  let i = setInterval(()=>{
+    t--;
+    timer.innerText = "Please wait " + t + " seconds";
+    if(t<=0){
+      clearInterval(i);
+      btn.disabled=false;
+      timer.innerText="Service ready again";
+      alert("Demo completed");
+    }
+  },1000);
+}
+
+function show(id){
+  ["services","prices","about"].forEach(x=>{
+    document.getElementById(x).classList.add("hidden");
+  });
+  document.getElementById(id).classList.remove("hidden");
 }
 </script>
 </body>
-</html>
+  </html>
