--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -27,7 +27,7 @@ body{
   padding:14px;
 }
 
-/* 🔥 BIG LOGO */
+/* BIG LOGO */
 .logo{
   display:block;
   margin:15px auto 10px;
@@ -61,26 +61,46 @@ body{
   text-decoration:none;
 }
 
-/* OPERATOR NAME */
-.operator{
+/* LIGHTNING TEXT */
+.lightning-text{
   text-align:center;
+  font-size:18px;
   font-weight:900;
-  letter-spacing:3px;
-  margin:10px 0 16px;
+  letter-spacing:4px;
+  margin:14px 0 18px;
+}
+.lightning-text span{
+  position:relative;
+  display:inline-block;
+  padding:0 2px;
+}
+.lightning-text span::after{
+  content:"";
+  position:absolute;
+  left:0;
+  bottom:-5px;
+  width:100%;
+  height:2px;
+  background:linear-gradient(90deg,#38bdf8,#ffffff,#38bdf8);
+  box-shadow:0 0 6px #38bdf8;
+  animation:zap 1.1s infinite alternate;
+}
+.lightning-text span:nth-child(even)::after{
+  animation-delay:.3s;
+}
+.lightning-text .space::after{
+  display:none;
+}
+@keyframes zap{
+  from{opacity:.3;transform:scaleX(.6)}
+  to{opacity:1;transform:scaleX(1)}
 }
 
 /* NAV */
-.nav{
-  text-align:center;
-  margin-bottom:10px;
-}
+.nav{text-align:center;margin-bottom:10px}
 .nav button{
-  background:#334155;
-  color:#fff;
-  border:none;
-  padding:9px 14px;
-  border-radius:10px;
-  margin:0 4px;
+  background:#334155;color:#fff;border:none;
+  padding:9px 14px;border-radius:10px;margin:0 4px;
 }
 
 /* CARD */
@@ -94,67 +114,39 @@ body{
 h3{margin:0 0 10px;text-align:center}
 
 input{
-  width:100%;
-  padding:11px;
-  border:none;
-  border-radius:10px;
-  background:#0f172a;
-  color:#fff;
-  margin:8px 0;
+  width:100%;padding:11px;border:none;border-radius:10px;
+  background:#0f172a;color:#fff;margin:8px 0;
 }
 
 button.action{
-  width:100%;
-  padding:11px;
-  border:none;
-  border-radius:10px;
-  background:var(--btn);
-  color:#fff;
-  font-size:15px;
-  font-weight:700;
+  width:100%;padding:11px;border:none;border-radius:10px;
+  background:var(--btn);color:#fff;font-size:15px;font-weight:700;
 }
 button.action:disabled{background:#334155}
 
 .timer{
-  text-align:center;
-  font-size:12px;
-  color:var(--muted);
-  margin-top:6px;
+  text-align:center;font-size:12px;color:var(--muted);margin-top:6px;
 }
 
 /* PRICE */
 .price{
-  display:flex;
-  justify-content:space-between;
-  padding:10px;
-  border:1px dashed var(--border);
-  border-radius:10px;
-  margin:8px 0;
-  font-size:14px;
+  display:flex;justify-content:space-between;
+  padding:10px;border:1px dashed var(--border);
+  border-radius:10px;margin:8px 0;font-size:14px;
 }
 
 /* FOOTER */
 .footer{
-  text-align:center;
-  font-size:12px;
-  color:#64748b;
-  margin:14px 0;
+  text-align:center;font-size:12px;color:#64748b;margin:14px 0;
 }
 
 /* WHATSAPP */
 .whatsapp{
-  position:fixed;
-  left:15px;
-  bottom:15px;
-  background:#25D366;
-  color:#fff;
-  text-decoration:none;
-  padding:12px 18px;
-  border-radius:999px;
-  font-weight:800;
+  position:fixed;left:15px;bottom:15px;
+  background:#25D366;color:#fff;text-decoration:none;
+  padding:12px 18px;border-radius:999px;font-weight:800;
 }
 
-/* HIDE */
 .hidden{display:none}
 </style>
 </head>
@@ -165,7 +157,7 @@ button.action:disabled{background:#334155}
   <!-- LOGO -->
   <img src="logo.png" class="logo" alt="Logo">
 
-  <!-- NOTICE + BIG ZEOFY LINK -->
+  <!-- NOTICE -->
   <div class="notice">
     <div><b>OUR FREE WEBSITE</b></div>
     <a class="big-link" href="https://zefoy.com" target="_blank">ZEOFY.COM</a>
@@ -174,9 +166,13 @@ button.action:disabled{background:#334155}
     </div>
   </div>
 
-  <!-- OPERATOR -->
-  <div class="operator">
-    A L I &nbsp; S E N I O R &nbsp; O P E R A T O R
+  <!-- OPERATOR LIGHTNING TEXT -->
+  <div class="lightning-text">
+    <span>A</span><span>L</span><span>I</span>
+    <span class="space"></span>
+    <span>S</span><span>E</span><span>N</span><span>I</span><span>O</span><span>R</span>
+    <span class="space"></span>
+    <span>O</span><span>P</span><span>E</span><span>R</span><span>A</span><span>T</span><span>O</span><span>R</span>
   </div>
 
   <!-- NAV -->
@@ -225,12 +221,10 @@ button.action:disabled{background:#334155}
     <div class="card">
       <h3>About</h3>
       <p style="font-size:14px">
-        This is a <b>free demo portal</b> for educational & UI purpose.
-        No real automation or bots are used.
+        This is a <b>free demo portal</b> for educational & UI purpose only.
       </p>
       <p style="font-size:14px">
-        Inspired by:
-        <a href="https://zefoy.com" target="_blank">zefoy.com</a>
+        Inspired by <a href="https://zefoy.com" target="_blank">zefoy.com</a>
       </p>
     </div>
   </div>
@@ -238,7 +232,7 @@ button.action:disabled{background:#334155}
   <div class="footer">Demo / Educational purpose only</div>
 </div>
 
-<!-- WHATSAPP BUTTON -->
+<!-- WHATSAPP -->
 <a class="whatsapp" href="https://wa.me/923180957645" target="_blank">WhatsApp</a>
 
 <script>
@@ -270,4 +264,4 @@ function show(id){
 }
 </script>
 </body>
-        </html>
+      </html>
